--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <div id="leftPanel">
       <div id="title">Puzzle game</div>
       <div id="timer">00:00</div>
-      <img id="imageHint" src="img/brave.jpg" alt="image"/>
+      <img id="imageHint" src="img/wroclaw.jpg" alt="image"/>
     </div>
     <canvas id="puzzleCanvas"></canvas>
   </div>
